signup view password update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 MealPrep.xcodeproj/project.xcworkspace/xcuserdata/jamieocumen.xcuserdatad/UserInterfaceState.xcuserstate
 MealPrep.xcodeproj/xcuserdata/jamieocumen.xcuserdatad/xcschemes/xcschememanagement.plist
+MealPrep.xcodeproj/project.xcworkspace/xcuserdata/jamieocumen.xcuserdatad/IDEFindNavigatorScopes.plist
